# tonic-buf-template

./: LICENSE.txt  README.md  cargo-generate.toml
.github/workflows/: validate_template.yaml
configs/: test-tonic-buf-template.toml
tonic-buf-template/: Cargo.toml  LICENSE-template.txt  LICENSE.txt  README.md  cargo-generate.toml  rust-toolchain.toml
tonic-buf-template/docker/: Dockerfile.{{project-name}}
tonic-buf-template/docker/scripts/: {{project-name}}-image-entrypoint.sh
tonic-buf-template/proto/: buf.yaml
tonic-buf-template/proto/github/canardleteer/grpc_service_rs/v1alpha1/: time_service.proto
tonic-buf-template/{{project-name}}-bindings/: Cargo.toml  build.rs
tonic-buf-template/{{project-name}}-bindings/src/: lib.rs
tonic-buf-template/{{project-name}}-client/: Cargo.toml
tonic-buf-template/{{project-name}}-client/src/: main.rs
tonic-buf-template/{{project-name}}-server/: Cargo.toml
tonic-buf-template/{{project-name}}-server/src/: main.rs
tonic-buf-template/{{project-name}}-service/: Cargo.toml
tonic-buf-template/{{project-name}}-service/src/: lib.rs
