[package]
name = "{{project-name}}-client"
version = "0.1.0"
edition = "2021"

[dependencies]
{{project-name}}-bindings = { version = "0.1.0", path = "../{{project-name}}-bindings" }

clap.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tracing.workspace = true

