[package]
name = "{{project-name}}-server"
version = "0.1.0"
edition = "2021"

[dependencies]
{{project-name}}-bindings = { version = "0.1.0", path = "../{{project-name}}-bindings" }
{{project-name}}-service = { version = "0.1.0", path = "../{{project-name}}-service" }
clap.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
prost.workspace = true
prost-types.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
